compiler/driver/tests/snapshots/diagnostics_snapshots__diag_asm_outside_unsafe.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E016]: `inline asm` requires unsafe
  --> diag_asm_outside_unsafe.ny:1:13
   |
  1 | fn main() { asm "nop" }
   |             ^^^
   = label: this operation can violate memory safety
   = help: wrap the operation in an `unsafe` block or function
